--- a/csgo.html
+++ b/csgo.html
@@ -7,7 +7,14 @@
     <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RedGame | Gaming Portal</title>
+    <title>RedGme | Gaming Portal</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -51,7 +58,7 @@
                                     <ul class="dropdown">
                                         <li><a href="categories.html">Minecraft</a></li>
                                         <li><a href="anime-details.html">CS:GO</a></li>
-                                        <li><a href="anime-watching.html">Rust</a></li>
+                                        <li><a href="rust.html">Rust</a></li>
                                         <li><a href="uturned.html">Unturned</a></li>
                                     </ul>
                                 </li>
