--- a/minecraft.html
+++ b/minecraft.html
@@ -59,7 +59,7 @@
                                         <li><a href="minecraft.html">Minecraft</a></li>
                                         <li><a href="csgo.html">CS:GO</a></li>
                                         <li><a href="rust.html">Rust</a></li>
-                                        <li><a href="uturned.html">Unturned</a></li>
+                                        <li><a href="unturned.html">Unturned</a></li>
                                     </ul>
                                 </li>
 
