--- a/unturned.html
+++ b/unturned.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.html">
+                        <a href="index.html">
                             <img src="img/logo.png" alt="">
                         </a>
                     </div>
@@ -53,7 +53,7 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li><a href="./index.html">Homepage</a></li>
+                                <li><a href="index.html">Homepage</a></li>
                                 <li><a href="#">Categories <span class="arrow_carrot-down"></span></a>
                                     <ul class="dropdown">
                                         <li><a href="minecraft.html">Minecraft</a></li>
@@ -81,13 +81,13 @@
     <!-- Header End -->
 
     <!-- Normal Breadcrumb Begin -->
-    <section class="normal-breadcrumb set-bg" data-setbg="img/normal-breadcrumb.jpg">
+    <section class="normal-breadcrumb set-bg" data-setbg="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
-                        <h2>Our Blog</h2>
-                        <p>Welcome to the official Anime blog.</p>
+                        <h2>Minecraft</h2>
+                        <p>Zde uvidíte aktualizace serveru.</p>
                     </div>
                 </div>
             </div>
@@ -206,6 +206,7 @@
             </div>
         </div>
     </section>
+    <!-- Blog Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer">
@@ -231,7 +232,7 @@
                 <div class="col-lg-3">
                 <p>
                   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | RedGame <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://mxthess.netlify.app/" target="_blank">Mxthess</a>
-                 </p>
+                 </p>>
 
                   </div>
               </div>
