--- a/rust.html
+++ b/rust.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="normal__breadcrumb__text">
-                        <h2>Minecraft</h2>
+                        <h2>Rust</h2>
                         <p>Zde uvidíte aktualizace serveru.</p>
                     </div>
                 </div>
