--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-lg-3">
                 <p>
-                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | RedGame <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://mxthess.netlify.app/" target="_blank">Mxthess</a>
+                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | RedGme <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://mxthess.netlify.app/" target="_blank">Mxthess</a>
                  </p>
 
               </div>
